--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ parking_lot_core = "0.2.2"
 void = { optional = true, version = "1.0.2" }
 
 [dev-dependencies]
+proptest = "0.8.1"
 tokio = "0.1.7"
 
 [profile.release]
