--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,15 +20,13 @@ license = "MIT/Apache-2.0"
 travis-ci = { repository = "jonhoo/bus" }
 
 [features]
-async = ["futures", "void"]
 bench = []
 
 [dependencies]
 atomic-option = "0.1"
-futures = { optional = true, version = "0.1.14" }
+futures = "0.1.14"
 num_cpus = "1.6.2"
-parking_lot_core = "0.2.2"
-void = { optional = true, version = "1.0.2" }
+void = "1.0.2"
 
 [dev-dependencies]
 proptest = "0.8.1"
@@ -36,7 +34,3 @@ tokio = "0.1.7"
 
 [profile.release]
 debug = true
-
-[[bin]]
-name = "bench"
-path = "src/bench.rs"
