--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "bus"
+name = "async_bus"
 version = "2.0.0"
 
 description = "A lock-free, bounded, single-producer, multi-consumer, broadcast channel."
